--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
     "com.unity.2d.enhancers": "1.0.0",
-    "com.unity.ai.assistant": "1.6.0-pre.1",
-    "com.unity.ai.inference": "2.4.1",
+    "com.unity.ai.assistant": "1.6.0-pre.2",
+    "com.unity.ai.inference": "2.5.0",
     "com.unity.render-pipelines.universal": "17.3.0",
+    "com.unity.modules.ai": "1.0.0",
+    "com.unity.modules.audio": "1.0.0",
+    "com.unity.modules.director": "1.0.0",
+    "com.unity.modules.particlesystem": "1.0.0",
     "com.unity.modules.physics2d": "1.0.0",
+    "com.unity.modules.tilemap": "1.0.0",
     "com.unity.modules.uielements": "1.0.0"
   }
 }
